* 2007-09-13 - marcus.klein@open-xchange.com

 - Bugfix #8935: Fixing once again another case breaking AJAX communication.
 - Bugfix #9445: Added handling for folders that are only visible.

* 2007-09-13 - ben.pahne@open-xchange.com

 - Fixed Bug #6335 - Check for bad characters impletemented

* 2007-09-12 - marcus.klein@open-xchange.com

 - Bugfix #9409: Reimplemented bugfix for bug 8935 to prevent this problem.

* 2007-09-12 - thorben.betten@open-xchange.com

 - Bugfix #9407: Using a thread-safe implementation of java.util.Map in
   IMAP connection watcher

* 2007-09-12 - ben.pahne@open-xchange.com

 - Fixed Bug 9224: Display Name / File as not synchronized to Outlook

* 2007-09-12 - francisco.laguna@open-xchange.com

 - Fix for Bug #6335, infostore. Strings are run against the validator.
 - Fix for Bug #6335, attachments. Strings are run against the validator.
 - Fix for Bug #9224: Allow import of empty contacts
 - Fix for Bug #9390: Calculate boundaries for webdav partial GET correctly

* 2007-09-11 - martin.kauss@open-xchange.com

 - Fixed bug #9137. It was not possible to move/edit an private appointment.
   This has been fixed.

 - Fixed bug #9191. Only the first reminder of a recurring appointment was
   shown after clicking on OK. This has been fixed.

* 2007-09-11 - marcus.klein@open-xchange.com

 - Bugfix #9341: Fixed returning null instead of throwing exception if context
   is not found.
 - Bugfix #9364: Using same mechanisms for modifying a search pattern for groups
   and resources.
 - Bugfix #8935: Removed replacing the string "null" with null.
 - Bugfix #9209: Illegal files for import now give all a message in the panel.
 - Bugfix #9384: Reloading task before updating last_modified to prevent
   exception on unsynchronized server times.

* 2007-09-10 - thorben.betten@open-xchange.com

 - Bugfix #9346: Changed mail component's code back to "MSG"

* 2007-09-10 - francisco.lagunar@open-xchange.com
